[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "algoritmia"
version = "2.0.9"
description = "A library of algorithms and data structures. Used in course EI1022/MT122 (Universitat Jaume I de Castelló)"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["data structures", "greedy", "divide and conquer", "dynamic programming", "branch and bound"]
license = {text = "GNU Affero General Public License v3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "easypaint",
]
authors = [
    {name = "David Llorens - Andrés Marzal"},
]

maintainers = [
    {name = "David Llorens", email = "dllorens@uji.es"}
]

#dynamic = ["version"]

[project.urls]
homepage = "https://github.com/DavidLlorens/algoritmia"
changelog = "https://github.com/DavidLlorens/algoritmia/blob/main/CHANGELOG.md"

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
